force-app/main/default/objects/Field_Map__mdt/Field_Map__mdt.object-meta.xml
<CustomObject>
    <description>Stores the opportunity record type (DeveloperName) to Price Book Name (Name) mapping along with all the fields (column headers) to be displayed in product related list /product search section on add / edit products UI.</description>
    <label>Field Map</label>
    <pluralLabel>Field Maps</pluralLabel>
</CustomObject>