force-app/main/default/objects/Field_Map__mdt/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <description>As is name of the price book from price book object</description>
    <inlineHelpText>Name of the price book, should be an exact match to price book name on Pricebook2 object.</inlineHelpText>
    <label>Pricebook Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>