force-app/main/default/objects/Field_Map__mdt/fields/ProductColumns__c.field-meta.xml
<CustomField>
    <fullName>ProductColumns__c</fullName>
    <description>List of columns (fields) to be displayed in products related list on opportunity detail page. Enter field API names with comma separator.</description>
    <inlineHelpText>List of columns (fields) to be displayed in products related list on opportunity detail page. Enter field API names with comma separator.</inlineHelpText>
    <label>ProductColumns</label>
    <type>TextArea</type>
</CustomField>