force-app/main/default/objects/Field_Map__mdt/fields/SearchProductsColumns__c.field-meta.xml
<CustomField>
    <fullName>SearchProductsColumns__c</fullName>
    <description>List of columns (fields) to be displayed in &quot;Search &amp; Add Products&quot; section on Add/Edit Products Page. Enter field API names with comma separator.</description>
    <inlineHelpText>List of columns (fields) to be displayed in &quot;Search &amp; Add Products&quot; section on Add/Edit Products Page. Enter field API names with comma separator.</inlineHelpText>
    <label>SearchProductsColumns</label>
    <type>TextArea</type>
</CustomField>