force-app/main/default/objects/Field_Map__mdt/fields/SelectedProductsColumns__c.field-meta.xml
<CustomField>
    <fullName>SelectedProductsColumns__c</fullName>
    <description>List of columns (fields) to be displayed in &quot;Selected Products&quot; section on Add/Edit Products Page. Enter field API names with semi colon separator.</description>
    <inlineHelpText>List of columns (fields) to be displayed in &quot;Selected Products&quot; section on Add/Edit Products Page. Enter field API names with semi colon separator.</inlineHelpText>
    <label>SelectedProductsColumns</label>
    <type>TextArea</type>
</CustomField>