force-app/main/default/objects/Field_Map__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Pricebook_Name__c</columns>
    <columns>ProductColumns__c</columns>
    <columns>SearchProductsColumns__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>